# vizhi-agentG

./: README.md  RUN_INSTRUCTIONS.md  pyproject.toml
src/vizhi_agentg/: __init__.py  _defaults.py  db_models.py  main.py  models.py  service.py  storage.py  worker.py
src/vizhi_agentg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vizhi_agentg/cloud/: __init__.py  client.py
src/vizhi_agentg/dashboard/: __init__.py  app.py  app_new.py
src/vizhi_agentg/dashboard/static/: app.css  app.js  index.html
src/vizhi_agentg/providers/: __init__.py  base.py  ollama.py  openai_compatible.py
